crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__fragment__multiple_root_elements.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(\"<div>a</div><div>b</div>\")"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<!--[--><div>a</div><div>b</div><!--]-->`)
}
